fixed alignment of form

--- a/static/styles.css
+++ b/static/styles.css
@@ -17,6 +17,14 @@ form{
   margin:auto;
 }
 
+.view-plants-form-container{
+  width: 50%;
+  margin-left:auto;
+  margin-right:auto;
+  margin-top: 20%;
+
+}
+
 .register-container{
   margin-bottom: 12%;    
 }
@@ -33,7 +41,8 @@ body{
   height:100vh; 
   margin:0;
   display:flex; 
-  flex-direction:column; }
+  flex-direction:column; 
+  }
 
   .login-footer{
     width: 90%;
@@ -99,13 +108,13 @@ h1{
 }
 
 p{
-  text-align: center;
   background-color: rgb(255,255,255);
   opacity: 0.9;
+  padding: 7px;
+  margin:auto;
   position: absolute;
-  top: 10%;
-
-
+  top: 30%;
+  border-radius: 7px;
 }
 
 ul{
